Demo-App/VirtualService/resultappingress.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: result-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "result.local"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: result
spec:
  hosts:
  - "result.local"
  gateways:
  - result-gateway
  http:
  - route:
     - destination: 
        host: result-service
        port:
          number: 80
